# comm_standalone

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  comm.cpp  comm.impala
